# hyrapi

./: .gitignore  404.html  Makefile  README.md  client.py  index.html  install.sh  main.py  mkdocs.yml  model.py  pyproject.toml  utils.py
.github/workflows/: build-and-release.yml  publish-doc.yml
collections/: index.html
docs/: collections.md  index.md
search/: search_index.json
